
Version 1.0b9 -

- removed message to console when trying to create the syntax diagram
- improved ability to cancel the grammar checking operation
- fixed a bug introduced in b8 that prevented syntax diagram from being displayed when moving the caret in the text pane
- fixed a bug where error reporting was not working properly if generating a grammar after checking it

Version 1.0b8 - 12/04/06

- fixed a bug where package name with dot would fail to be correctly parsed
- fixed a bug where creating a new document would fail
- fixed a bug where checking the grammar would make the current syntax diagram go away
- fixed a bug where checking twice a grammar containing one or more errors would fail to report the errors the second time

Version 1.0b7 - 12/03/06

- handles now the "package" statement found in the @header block (both parser and lexer)
- new idea to convert invalid grammar name
- prefs: auto-indent on colon in rule can be disabled now
- interpreter now correctly identify rules to ignore when using skip() in action
- display the read/write state of each grammar document (disable editing if grammar is read-only)

- fixed the default size of the preferences window that was too small
- fixed various end of line problem on Windows causing syntax coloring and debugger token highlighting to fail
- fixed a bug where the AST/Parse tree contextual menu would not work when the focus was not in the panel
- fixed a bug where generating code for a read-only grammar could result in an infinite loop
- fixed a bug where the window size/position would not be recorded when AW is closed
- fixed a bug where an editor thread would not be stopped when a document was closed
- fixed a bug where the end of line pop-up menu in the debugger input dialog would be populated twice
- fixed a bug in the interpreter where the "guess" button would not work properly
- fixed a bug in the debugger where the red cursor would not be displayed on Java 1.4

Version 1.0b6 - 11/18/06
