@@ -1,4 +1,4 @@
-GrammarDocumentType = ANTLR 3 Grammar (*.g)
+GrammarDocumentType = ANTLR 3 Grammar (*.g, *.gl, *.gp, *.gtp)
 ProjectDocumentType = ANTLRWorks Project (*.awp)
 
 UpdateXMLURL=http://www.antlr.org/works/update.xml
@@ -6,13 +6,13 @@ UpdateOSXXMLURL=http://www.antlr.org/works/update_osx.xml
 FeedbackURL=http://www.antlr.org/misc/feedback
 DocumentationURL=http://www.antlr.org/works/doc/antlrworks.pdf
 
-AppVersionShort=1.0b8
-AppVersionLong=1.0b8
+AppVersionShort=1.0b9
+AppVersionLong=1.0b9
 AppName = ANTLRWorks
-AppBuildDate=12/04/2006
+AppBuildDate=01/01/2007
 
 SplashInfo = Edit, visualize and debug ANTLR grammars
-SplashVersion = Version 1.0b8
-SplashCopyright = (c) 2005-2006 Jean Bovet & Terence Parr
+SplashVersion = Version 1.0b9
+SplashCopyright = (c) 2005-2007 Jean Bovet & Terence Parr
 
 DefaultFont = Monospaced
