@@ -3,6 +3,8 @@ Version 1.0b9 -
 
 - removed message to console when trying to create the syntax diagram
 - improved ability to cancel the grammar checking operation
+- can open now files with extension g, gl, gp and gtp.
+- fixed a bug where inline template where incorrectly flagged as "syntax error"
 - fixed a bug introduced in b8 that prevented syntax diagram from being displayed when moving the caret in the text pane
 - fixed a bug where error reporting was not working properly if generating a grammar after checking it
 
